refactor: clean up team template styles (#7155)
* nest team template styles

* group same parent

* nest tabs behavior

* nest group table hybrid styles

* nest match1 compat rules

* better match old version

--- a/stylesheets/commons/TeamTemplates.scss
+++ b/stylesheets/commons/TeamTemplates.scss
@@ -5,14 +5,65 @@ Author(s): FO-nTTaX
 
 .team-template-image {
 	vertical-align: 2px;
+
+	img {
+		width: 60px;
+		height: 25px;
+		image-rendering: -webkit-optimize-contrast;
+
+		.tabs & {
+			width: 40px;
+			height: 17px;
+		}
+	}
 }
 
 .team-template-image-icon {
+	width: 60px;
+	height: 25px;
+	display: inline-block;
+	text-align: center;
 	vertical-align: 2px;
+
+	.tabs & {
+		width: auto;
+		height: 17px;
+	}
+
+	img {
+		max-width: 50px;
+		max-height: 25px;
+		width: auto;
+		height: auto;
+
+		.tabs & {
+			max-width: 40px;
+			max-height: 17px;
+			width: auto;
+			height: auto;
+			margin-right: 9px;
+		}
+	}
+
+	i {
+		font-size: 25px;
+		vertical-align: middle;
+		color: var( --clr-secondary-70 );
+	}
 }
 
 .team-template-image-legacy {
 	vertical-align: 2px;
+
+	img {
+		width: 60px;
+		height: 25px;
+
+		.tabs & {
+			width: 40px;
+			height: 17px;
+		}
+	}
 }
 
 .team-template-team-part {
@@ -23,60 +74,6 @@ Author(s): FO-nTTaX
 	display: none;
 }
 
-.team-template-image img {
-	width: 60px;
-	height: 25px;
-	image-rendering: -webkit-optimize-contrast;
-}
-
-.team-template-image-icon {
-	width: 60px;
-	height: 25px;
-	display: inline-block;
-	text-align: center;
-}
-
-.team-template-image-icon img {
-	max-width: 50px;
-	max-height: 25px;
-	width: auto;
-	height: auto;
-}
-
-.team-template-image-icon i {
-	font-size: 25px;
-	vertical-align: middle;
-	color: var( --clr-secondary-70 );
-}
-
-.team-template-image-legacy img {
-	width: 60px;
-	height: 25px;
-}
-
-.tabs .team-template-image img {
-	width: 40px;
-	height: 17px;
-}
-
-.tabs .team-template-image-legacy img {
-	width: 40px;
-	height: 17px;
-}
-
-.tabs .team-template-image-icon img {
-	max-width: 40px;
-	max-height: 17px;
-	width: auto;
-	height: auto;
-	margin-right: 9px;
-}
-
-.tabs .team-template-image-icon {
-	width: auto;
-	height: 17px;
-}
-
 /* Improved match1 display by iMarbot */
 span.team-template-team-bracket {
 	white-space: nowrap;
@@ -84,27 +81,29 @@ span.team-template-team-bracket {
 	height: var( --team-template-bracket-height, 21px );
 }
 
-.team-template-team-bracket .team-template-image-icon,
-.team-template-team-bracket .team-template-image-legacy {
-	vertical-align: 0;
-	height: var( --team-template-bracket-height, 21px );
-	width: calc( var( --team-template-bracket-height, 21px ) * 2.4 );
-}
+.team-template-team-bracket {
+	.team-template-image-icon,
+	.team-template-image-legacy {
+		vertical-align: 0;
+		height: var( --team-template-bracket-height, 21px );
+		width: calc( var( --team-template-bracket-height, 21px ) * 2.4 );
+	}
 
-.team-template-team-bracket .team-template-image-icon img {
-	max-width: 90%;
-	max-height: 100%;
-}
+	.team-template-image-icon img {
+		max-width: 90%;
+		max-height: 100%;
+	}
 
-.team-template-team-bracket .team-template-image-legacy img {
-	max-width: 100%;
-	max-height: 100%;
-	width: auto;
-	height: auto;
-}
+	.team-template-image-legacy img {
+		max-width: 100%;
+		max-height: 100%;
+		width: auto;
+		height: auto;
+	}
 
-.team-template-team-bracket > .team-template-text {
-	vertical-align: middle;
+	> .team-template-text {
+		vertical-align: middle;
+	}
 }
 
 /* fix for timeline by FO-nTTaX */
@@ -152,22 +151,24 @@ Author(s): iMarbot, Darkrai
 Template(s): Group Table Hybrid
 Author(s): iMarbot
 *******************************************************************************/
-@media ( max-width: 399px ) {
-	.grouptableslot .team-template-text.mobile-hide {
-		display: none !important;
+.grouptableslot .team-template-text {
+	@media ( max-width: 399px ) {
+		&.mobile-hide {
+			display: none !important;
+		}
+
+		&.mobile-only {
+			display: unset !important;
+		}
 	}
 
-	.grouptableslot .team-template-text.mobile-only {
-		display: unset !important;
-	}
-}
+	@media ( min-width: 400px ) {
+		&.mobile-hide {
+			display: unset !important;
+		}
 
-@media ( min-width: 400px ) {
-	.grouptableslot .team-template-text.mobile-hide {
-		display: unset !important;
-	}
-
-	.grouptableslot .team-template-text.mobile-only {
-		display: none !important;
+		&.mobile-only {
+			display: none !important;
+		}
 	}
 }
