feat(table2): add subheader option (#7147)
* implement subheader type

* section can be passed as prop

* left align and sticky the subheader

* pass the subhead to Row

* cleanup

* add section context back

---------

Co-authored-by: ElectricalBoy <15651807+ElectricalBoy@users.noreply.github.com>

--- a/stylesheets/commons/Table2.scss
+++ b/stylesheets/commons/Table2.scss
@@ -201,6 +201,12 @@ $table2-cell-padding-x: 0.75rem;
 		}
 	}
 
+	.table2__subheader-cell {
+		position: sticky;
+		left: 0.75rem;
+		width: min-content;
+	}
+
 	&--themed {
 		.table2__title {
 			.theme--light & {
